# PlantWise

./: .gitignore  README.md  pyproject.toml
Notebooks/: app.py  main.ipynb  model_testing.ipynb
