[project]
name = "plantwise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "opencv-python>=4.12.0.88",
    "opendatasets>=0.1.22",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "streamlit>=1.47.0",
    "tensorflow>=2.19.0",
]
